objects/Rosco_Account__c/Rosco_Account__c.object-meta.xml
<CustomObject>
    <label>rosco_account</label>
    <nameField>
        <label>slack_name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>rosco_accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>