objects/Rosco_Account__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>rosco_accounts</relationshipLabel>
    <relationshipName>rosco_accounts</relationshipName>
    <type>Lookup</type>
</CustomField>