objects/Rosco_Account__c/fields/account_flash__c.field-meta.xml
<CustomField>
    <fullName>account_flash__c</fullName>
    <label>account_flash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>