objects/Rosco_Account__c/fields/Bypass_Triage_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Triage_Tickets__c</fullName>
    <label>Bypass_Triage_Tickets</label>
    <length>15</length>
    <type>Text</type>
</CustomField>