objects/Rosco_Account__c/fields/case_flash__c.field-meta.xml
<CustomField>
    <fullName>case_flash__c</fullName>
    <label>case_flash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>