objects/Rosco_Account__c/fields/Case_Flash_Persist__c.field-meta.xml
<CustomField>
    <fullName>Case_Flash_Persist__c</fullName>
    <label>Case Flash Persist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>