objects/Rosco_Account__c/fields/case_report_frequency__c.field-meta.xml
<CustomField>
    <fullName>case_report_frequency__c</fullName>
    <label>case_report_frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>daily</fullName>
            </value>
            <value>
                <fullName>weekly</fullName>
            </value>
            <value>
                <fullName>monthly</fullName>
            </value>
            <value>
                <fullName>opt-out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>