objects/Rosco_Account__c/fields/email_cc_on_owner_change__c.field-meta.xml
<CustomField>
    <fullName>email_cc_on_owner_change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>email_cc_on_owner_change</label>
    <type>Checkbox</type>
</CustomField>