objects/Rosco_Account__c/fields/secondary_flash__c.field-meta.xml
<CustomField>
    <fullName>secondary_flash__c</fullName>
    <label>secondary_flash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>