objects/Rosco_Account__c/fields/Support_Info__c.field-meta.xml
<CustomField>
    <fullName>Support_Info__c</fullName>
    <label>Support_Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>