objects/Rosco_Account__c/fields/Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Type__c</fullName>
    <label>Support_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Legacy-Shared-East</fullName>
            </value>
            <value>
                <fullName>Legacy-Shared-Central</fullName>
            </value>
            <value>
                <fullName>8x6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>