objects/Rosco_Account__c/fields/Survey_AllTimeCaseCount__c.field-meta.xml
<CustomField>
    <fullName>Survey_AllTimeCaseCount__c</fullName>
    <label>All Transactional Surveys</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>