objects/Rosco_Account__c/fields/Survey_AllTimeCaseCSAT__c.field-meta.xml
<CustomField>
    <fullName>Survey_AllTimeCaseCSAT__c</fullName>
    <label>All CSAT</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>