objects/Rosco_Account__c/fields/Survey_AllTimeCaseScore__c.field-meta.xml
<CustomField>
    <fullName>Survey_AllTimeCaseScore__c</fullName>
    <label>All Transactional NPS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>