objects/Rosco_Account__c/fields/Survey_AllTimeCount__c.field-meta.xml
<CustomField>
    <fullName>Survey_AllTimeCount__c</fullName>
    <description>(not currently used) All  Relational and Transactional  Surveys (not ESO)</description>
    <inlineHelpText>(not currently used) All  Relational and Transactional  Surveys (not ESO)</inlineHelpText>
    <label>All Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>