objects/Rosco_Account__c/fields/Survey_AllTimeRelationalCount__c.field-meta.xml
<CustomField>
    <fullName>Survey_AllTimeRelationalCount__c</fullName>
    <label>All Relational Surveys</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>