objects/Rosco_Account__c/fields/Survey_AllTimeRelationalScore__c.field-meta.xml
<CustomField>
    <fullName>Survey_AllTimeRelationalScore__c</fullName>
    <label>All Relational NPS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>