objects/Rosco_Account__c/fields/Survey_AllTimeScore__c.field-meta.xml
<CustomField>
    <fullName>Survey_AllTimeScore__c</fullName>
    <label>All NPS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>