objects/Rosco_Account__c/fields/Survey_MostRecentCaseCSAT__c.field-meta.xml
<CustomField>
    <fullName>Survey_MostRecentCaseCSAT__c</fullName>
    <label>Last Survey CSAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>