objects/Rosco_Account__c/fields/Survey_MostRecentCaseDate__c.field-meta.xml
<CustomField>
    <fullName>Survey_MostRecentCaseDate__c</fullName>
    <label>Last Transactional Survey Date</label>
    <type>DateTime</type>
</CustomField>