objects/Rosco_Account__c/fields/Survey_MostRecentCaseScore__c.field-meta.xml
<CustomField>
    <fullName>Survey_MostRecentCaseScore__c</fullName>
    <label>Last Transactional Survey NPS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>