objects/Rosco_Account__c/fields/Survey_MostRecentDate__c.field-meta.xml
<CustomField>
    <fullName>Survey_MostRecentDate__c</fullName>
    <label>Last Date</label>
    <type>DateTime</type>
</CustomField>