objects/Rosco_Account__c/fields/Survey_MostRecentRelationalDate__c.field-meta.xml
<CustomField>
    <fullName>Survey_MostRecentRelationalDate__c</fullName>
    <label>Last Relational Survey Date</label>
    <type>DateTime</type>
</CustomField>