objects/Rosco_Account__c/fields/Survey_MostRecentRelationalScore__c.field-meta.xml
<CustomField>
    <fullName>Survey_MostRecentRelationalScore__c</fullName>
    <label>Last Relational Survey NPS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>