objects/Rosco_Account__c/fields/Survey_MostRecentScore__c.field-meta.xml
<CustomField>
    <fullName>Survey_MostRecentScore__c</fullName>
    <label>Last NPS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>