objects/Rosco_Account__c/fields/Survey_Rolling12MonthScore__c.field-meta.xml
<CustomField>
    <fullName>Survey_Rolling12MonthScore__c</fullName>
    <label>12 Month NPS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>