objects/Rosco_Account__c/fields/tertiary_flash__c.field-meta.xml
<CustomField>
    <fullName>tertiary_flash__c</fullName>
    <label>tertiary_flash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>