objects/Rosco_Account__c/fields/Tertiary_Slack_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Slack_Channel_Id__c</fullName>
    <label>Tertiary_Slack_Channel_Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>