objects/Rosco_Account__c/fields/triage_flash__c.field-meta.xml
<CustomField>
    <fullName>triage_flash__c</fullName>
    <label>triage_flash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>