objects/Rosco_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>triage_flash__c</columns>
    <columns>require_support_case_role__c</columns>
    <columns>account__c</columns>
    <columns>Secondary_Slack_Channel_Id__c</columns>
    <columns>account_flash__c</columns>
    <columns>Bypass_Triage_Tickets__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>