objects/Rosco_Account__c/listViews/Bypass_Triage.listView-meta.xml
<ListView>
    <fullName>Bypass_Triage</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>account__c</columns>
    <columns>NAME</columns>
    <columns>Bypass_Triage_Tickets__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bypass_Triage_Tickets__c</field>
        <operation>contains</operation>
        <value>G</value>
    </filters>
    <filters>
        <field>Bypass_Triage_Tickets__c</field>
        <operation>contains</operation>
        <value>C</value>
    </filters>
    <label>Bypass Triage</label>
</ListView>