objects/Rosco_Account__c/listViews/SME.listView-meta.xml
<ListView>
    <fullName>SME</fullName>
    <columns>account__c</columns>
    <columns>NAME</columns>
    <columns>Secondary_Slack_Channel_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>SME</label>
</ListView>