objects/Rosco_Account__c/listViews/Support_Center_Account.listView-meta.xml
<ListView>
    <fullName>Support_Center_Account</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bypass_Triage_Tickets__c</field>
        <operation>equals</operation>
        <value>C01DAP85W3A</value>
    </filters>
    <filters>
        <field>Tertiary_Slack_Channel_Id__c</field>
        <operation>equals</operation>
        <value>C01DAP85W3A</value>
    </filters>
    <label>Support Center Accounts</label>
</ListView>